new commit again35

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     html, body { width: 100%; height: 100%; overflow-x: hidden; }
     body {
       background-color: #cbb4e6; /* Light purple */
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Comic Sans MS', sans-serif;
       position: relative;
       padding-top: 30px;
     }
@@ -249,6 +249,7 @@
   <!-- Dancing Kitten -->
   <img class="kitten" src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" alt="Dancing Kitten">
 
+
   <!-- Celebration Form Page (Hidden by Default) -->
   <div id="celebrationPage"></div>
 
@@ -380,7 +381,7 @@
       finalPage.style.display = 'block';
       finalPage.innerHTML = `
         <h1>Alrighty then love u pookie :))))</h1>
-        <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" 
+        <img class="hugg" src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" 
      alt="Two Cats Hugging" 
      style="width: 100%; width: 600px; display: block; margin: auto;">
         
