new commit again36

--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
       .cat-run, .panda, .kitten {
         width: 80px; /* Smaller GIFs for mobile */
       }
+      .celebration-form {
+        width: 70%;
+        max-width: 400px;
+      }
     }
 
   </style>
