--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
       }
       .celebration-form {
         width: 80%;
-        max-width: 450px;
+        max-width: 300px;
+        max-height: 200px;
         margin: auto
       }
     }
