new commit again40

--- a/index.html
+++ b/index.html
@@ -228,13 +228,12 @@
         width: 60%; /* Ensure the KitKat image is responsive */
         max-width: 200px; /* Limit max width */
       }
-      .cat-run, .panda, .kitten .hugg {
+      .cat-run, .panda, .kitten, .hugg {
         width: 90px; /* Smaller GIFs for mobile */
       }
       .celebration-form {
-        width: 60%;
-        max-width: 300px;
-        margin: auto
+        max-width: 70%; /* Change to a percentage for responsiveness */
+        padding: 15px; /* Reduce padding */
       }
     }
 
