new commit again41

--- a/index.html
+++ b/index.html
@@ -228,12 +228,15 @@
         width: 60%; /* Ensure the KitKat image is responsive */
         max-width: 200px; /* Limit max width */
       }
-      .cat-run, .panda, .kitten, .hugg {
+      .cat-run, .panda, .kitten {
         width: 90px; /* Smaller GIFs for mobile */
       }
+      .hugg {
+        width: 200px; /* Smaller GIFs for mobile */
+      }
       .celebration-form {
-        max-width: 70%; /* Change to a percentage for responsiveness */
-        padding: 15px; /* Reduce padding */
+        max-width: 80%; /* Change to a percentage for responsiveness */
+        padding: 5px; /* Reduce padding */
       }
     }
 
