--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
         width: 200px; /* Smaller GIFs for mobile */
       }
       .celebration-form {
-        max-width: 80%; /* Change to a percentage for responsiveness */
+        max-width: 90%; /* Change to a percentage for responsiveness */
         padding: 5px; /* Reduce padding */
+        margin: 0 auto;
       }
     }
 
