new commit again45

--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@
         width: 350px; /* Smaller GIFs for mobile */
       }
       .celebration-form {
-        max-width: 90%; /* Change to a percentage for responsiveness */
-        padding: 1px; /* Reduce padding */
+        max-width: 70%; /* Change to a percentage for responsiveness */
+        max-height: 70%;
+        padding: 4px; /* Reduce padding */
         margin: 0 auto;
       }
     }
