--- a/index.html
+++ b/index.html
@@ -235,10 +235,11 @@
         width: 350px; /* Smaller GIFs for mobile */
       }
       .celebration-form {
-        max-width: 70%; /* Change to a percentage for responsiveness */
+        max-width: 90%; /* Change to a percentage for responsiveness */
         max-height: 70%;
         padding: 4px; /* Reduce padding */
         margin: 0 auto;
+        transform: scale(0.8);
       }
     }
 
