--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     .celebration-form label {
       display: block;
       margin: 10px 0;
-      font-size: 1.1em;
+      font-size: 1.3em;
     }
     .celebration-form input[type="text"] {
       width: 100%;
@@ -231,11 +231,14 @@
       .cat-run, .panda, .kitten {
         width: 90px; /* Smaller GIFs for mobile */
       }
+      .cat-run {
+        width: 130px; /* Smaller GIFs for mobile */
+      }
       .hugg {
         width: 350px; /* Smaller GIFs for mobile */
       }
       .celebration-form {
-        max-width: 90%; /* Change to a percentage for responsiveness */
+        max-width: 95%; /* Change to a percentage for responsiveness */
         max-height: 70%;
         padding: 4px; /* Reduce padding */
         margin: 0 auto;
