new commit again50

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
       display: block;
       margin: 20px auto;
     }
+    .celebration-form select {
+      font-size: 0.9em;
+    }
 
     /* ----- Final Celebration Page ----- */
     #finalPage {
