--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       const finalPage = document.getElementById('finalPage');
       finalPage.style.display = 'block';
       finalPage.innerHTML = `
-        <h1>Alrighty then love u pookie :))))</h1>
+        <h1>Thx for being such a LOVE-ly Pookie :))))</h1>
         <img class="hugg" src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Two Cats Hugging">
       `;
       startConfetti();
