--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <h2>Yay! Let's plan our day!</h2>
         <form id="valentineForm">
             <input type="hidden" name="_replyto" value="nima.jafari.614@my.csun.edu">
-            <label><input type="checkbox" name="activity" value="small dinner"> Small Dinner</label>
+            <label><input type="checkbox" name="activity" value="small dinner (maybe portos)"> Small Dinner</label>
             <label><input type="checkbox" name="activity" value="froyo"> Froyo</label>
             <label><input type="checkbox" name="activity" value="ice cream"> Ice Cream</label>
             <label><input type="checkbox" name="activity" value="hot coco"> Hot Coco</label>
@@ -418,13 +418,13 @@
             <label><input type="checkbox" name="activity" value="sweets"> Sweets</label>
             <label><input type="checkbox" name="activity" value="drinks"> Drinks</label>
             <label>
-            Exchange lil gifts?
+            Should we exchange lil gifts?
             <select name="exchange gift">
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
             </select>
             </label>
-            <p style="font-weight: bold; color: #D2691E;">Flowers, Kisses, and possibly Gifts are non-negotiable!</p>
+            <p style="font-weight: bold; color: #D2691E;">Flowers, and Kisses are non-negotiable tho</p>
             <label>
             Or what would be your ideal valentine?
             <input type="text" name="other" placeholder="write it down">
