--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     celebrationPage.style.display = 'block';
     celebrationPage.innerHTML = `
         <div class="celebration-form">
-        <h2>Yay! Let's plan our day!</h2>
+        <h2>Yay! Let's plan our evening!</h2>
         <form id="valentineForm">
             <input type="hidden" name="_replyto" value="nima.jafari.614@my.csun.edu">
             <label><input type="checkbox" name="activity" value="small dinner (maybe portos)"> Small Dinner</label>
