--- a/index.html
+++ b/index.html
@@ -424,6 +424,13 @@
                 <option value="no">No</option>
             </select>
             </label>
+            <label>
+            Did u like this website?
+            <select name="wensite like">
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+            </label>
             <p style="font-weight: bold; color: #D2691E;">Flowers, and Kisses are non-negotiable tho</p>
             <label>
             Or what would be your ideal valentine?
