--- a/index.html
+++ b/index.html
@@ -411,10 +411,8 @@
         <form id="valentineForm">
             <input type="hidden" name="_replyto" value="nima.jafari.614@my.csun.edu">
             <label><input type="checkbox" name="activity" value="small dinner (maybe portos)"> Small Dinner</label>
-            <label><input type="checkbox" name="activity" value="froyo"> Froyo</label>
-            <label><input type="checkbox" name="activity" value="ice cream"> Ice Cream</label>
-            <label><input type="checkbox" name="activity" value="hot coco"> Hot Coco</label>
-            <label><input type="checkbox" name="activity" value="coffee"> Coffee</label>
+            <label><input type="checkbox" name="activity" value="froyo/ice cream"> Froyo/Ice Cream</label>
+            <label><input type="checkbox" name="activity" value="hot coco"> Hot Coco/Coffee</label>
             <label><input type="checkbox" name="activity" value="sweets"> Sweets</label>
             <label><input type="checkbox" name="activity" value="drinks"> Drinks</label>
             <label>
