--- a/index.html
+++ b/index.html
@@ -425,8 +425,9 @@
             <label>
             Did u like this website?
             <select name="wensite like">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
+                <option value="yes">Yep</option>
+                <option value="Absolutely">Absolutely</option>
+                <option value="Of course">of course!!</option>
             </select>
             </label>
             <p style="font-weight: bold; color: #D2691E;">Flowers, and Kisses are non-negotiable tho</p>
