--- a/index.html
+++ b/index.html
@@ -418,8 +418,10 @@
             <label>
             Should we exchange lil gifts?
             <select name="exchange gift">
+                <option value="Ja">Ja</option>
+                <option value="Si">Si</option>
                 <option value="yes">Yes</option>
-                <option value="no">No</option>
+                <option value="no">No 🥺</option>
             </select>
             </label>
             <label>
